# fioxa

./: .gitignore  README.md  devenv.nix  flake.nix  x86_64-unknown-fioxa.json
amd_pcnet/: Cargo.toml
amd_pcnet/src/: main.rs
apps/: Cargo.toml  x86_64-unknown-fioxa.json
apps/calc/: Cargo.toml
apps/calc/src/: main.rs
apps/net/: Cargo.toml
apps/net/src/: main.rs
apps/terminal/: Cargo.toml
apps/terminal/src/: main.rs
apps/test/: Cargo.toml
apps/test/src/: main.rs
bootloader/: Cargo.toml
bootloader/.cargo/: config.toml
bootloader/src/: fs.rs  gop.rs  kernel.rs  lib.rs  main.rs  psf1.rs
bootloader/src/paging/: mod.rs  page_directory.rs  page_table_manager.rs
builder/: .gitignore  Cargo.toml
builder/assets/: startup.nsh
builder/src/: errors.rs  main.rs
calc/: Cargo.toml
calc/src/: main.rs
drivers/: Cargo.toml  x86_64-unknown-fioxa.json
drivers/.cargo/: config.toml
drivers/amd_pcnet/: Cargo.toml
drivers/amd_pcnet/src/: bitfields.rs  main.rs
drivers/ps2/: Cargo.toml
drivers/ps2/src/: keyboard.rs  main.rs  mouse.rs  translate.rs
drivers/ps2/src/scancode/: mod.rs  set2.rs
input/: Cargo.toml
input/src/: keyboard.rs  lib.rs  mouse.rs
input/src/keyboard/: us_keyboard.rs  virtual_code.rs
kernel/: Cargo.toml  build.rs  link.ld  x86_64-unknown-fioxa.json
kernel/.cargo/: config.toml
kernel/src/: acpi.rs  boot_aps.rs  bootfs.rs  channel.rs  console.rs  cpu_localstorage.rs  elf.rs  event.rs  gdt.rs  hpet.rs  ioapic.rs  lapic.rs  lib.rs  locked_mutex.rs  logging.rs  main.rs  memory.rs  message.rs  mutex.rs  object.rs  pit.rs  port.rs  serial.rs  service.rs  socket.rs  stream.rs  terminal.rs  thread_waker.rs  time.rs  uefi.rs  user.rs  vm.rs
kernel/src/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs  mod.rs  slab_allocator.rs
kernel/src/assembly/: ap_trampoline  ap_trampoline.asm  mod.rs  registers.rs
kernel/src/driver/: disk.rs  driver.rs  mod.rs  net.rs
kernel/src/driver/disk/: ahci.rs  ata.rs
kernel/src/driver/disk/ahci/: bitfields.rs  fis.rs  port.rs
kernel/src/driver/net/: amd_pcnet.rs
kernel/src/fs/: fat.rs  mbr.rs  mod.rs
kernel/src/gdt/: mod.rs  tss.rs
kernel/src/interrupts/: exceptions.rs  hardware.rs  mod.rs  pic.rs
kernel/src/memory/: mod.rs  uefi.rs
kernel/src/multitasking/: mod.rs  task.rs  taskmanager.rs
kernel/src/net/: arp.rs  ethernet.rs
kernel/src/paging/: identity_map.rs  mod.rs  offset_map.rs  page.rs  page_allocator copy.rs  page_allocator.rs  page_directory.rs  page_map_index.rs  page_mapper.rs  page_table.rs  page_table_manager.rs
kernel/src/paging/page_table_manager/: lvl1.rs  lvl2.rs  lvl3.rs  lvl4.rs  map.rs  walk.rs
kernel/src/pci/: express.rs  legacy.rs  mcfg.rs  mod.rs  pci_descriptors.rs
kernel/src/ps2/: keyboard.rs  mod.rs  mouse.rs  translate.rs
kernel/src/ps2/scancode/: keys.rs  mod.rs  set2.rs
kernel/src/scheduling/: mod.rs  process.rs  taskmanager.rs
kernel/src/screen/: font.rs  gop.rs  mod.rs  mouse.rs  psf1.rs
kernel/src/syscall/: exit_userspace.rs  mod.rs
kernel/src/time/: hpet.rs  pit.rs
kernel/src/time/hpet/: bitfields.rs
kernel_sys/: Cargo.toml
kernel_sys/kernel_syscall/: Cargo.toml
kernel_sys/kernel_syscall/src/: lib.rs
kernel_sys/src/: lib.rs  syscall.rs  types.rs
kernel_sys/src/raw/: syscall.rs  types.rs
kernel_userspace/: Cargo.toml
kernel_userspace/src/: channel.rs  elf.rs  event.rs  fs.rs  handle.rs  ids.rs  input.rs  interrupt.rs  ipc.rs  lib.rs  message.rs  net.rs  object.rs  pci.rs  port.rs  proc.rs  process.rs  resource.rs  service.rs  socket.rs  stream.rs  syscall.rs
libs/: Cargo.toml
libs/input/: Cargo.toml
libs/input/src/: mouse.rs
libs/input/src/keyboard/: us_keyboard.rs  virtual_code.rs
libs/kernel_sys/: Cargo.toml
libs/kernel_sys/kernel_syscall/: Cargo.toml
libs/kernel_sys/kernel_syscall/src/: lib.rs
libs/kernel_sys/src/: lib.rs  raw.rs  syscall.rs  types.rs
libs/kernel_sys/src/raw/: syscall.rs
libs/kernel_userspace/: Cargo.toml
libs/kernel_userspace/src/: channel.rs  condvar.rs  disk.rs  elf.rs  fs.rs  handle.rs  input.rs  interrupt.rs  ipc.rs  lib.rs  message.rs  mutex.rs  net.rs  pci.rs  port.rs  process.rs  semaphore.rs  service.rs  vm.rs
libs/kernel_userspace/src/disk/: ata.rs
libs/userspace/: Cargo.toml
libs/userspace/src/: lib.rs  logger.rs  print.rs
libs/userspace_slaballoc/: Cargo.toml
libs/userspace_slaballoc/src/: lib.rs  locked_mutex.rs  slab.rs
net/: Cargo.toml
net/src/: main.rs
ps2/: Cargo.toml
ps2/src/: keyboard.rs  main.rs  mouse.rs  translate.rs
ps2/src/scancode/: set2.rs
terminal/: Cargo.toml
terminal/src/: error.rs  fns.rs  lib.rs  main.rs
terminal/src/script/: execute.rs  mod.rs  parser.rs  tokenizer.rs
test_elf/: Cargo.toml
test_elf/.cargo/: config.toml
test_elf/src/: main.rs
types/: Cargo.toml
types/src/: lib.rs
userspace/: Cargo.toml
userspace/src/: lib.rs  logger.rs  print.rs  proc.rs  syscall.rs
userspace_bumpalloc/: Cargo.toml
userspace_bumpalloc/src/: bump.rs  lib.rs
userspace_slaballoc/: Cargo.toml
userspace_slaballoc/src/: lib.rs  slab.rs
