[package]
name = "amd_pcnet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
userspace_slaballoc = { path = "../userspace_slaballoc" }
userspace = { path = "../userspace" }
kernel_userspace = { path = "../kernel_userspace" }

conquer-once = {version = "0.4", default-features = false}
spin = "0.9"
x86_64 = "0.14"
modular-bitfield = { version = "0.11", default-features = false}

[profile.dev]
strip = true