[package]
name = "amd_pcnet"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
userspace_slaballoc = { path = "../userspace_slaballoc" }
userspace = { path = "../userspace" }
kernel_sys = { path = "../kernel_sys" }
kernel_syscall = { path = "../kernel_sys/kernel_syscall", features = ["iret"] }
kernel_userspace = { path = "../kernel_userspace" }

spin = "0.9"
x86_64 = "0.14"
modular-bitfield = { version = "0.11", default-features = false}

[profile.dev]
strip = true