[package]
name = "bootloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uefi = { version = "0.30", features = ["logger"] }
log = "0.4"

x86_64 = "0.14"
modular-bitfield = { version = "0.11", default-features = false}
