[package]
name = "bootloader"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["uefi/global_allocator", "uefi/panic_handler"]

[dependencies]
elf = { version = "0.8.0", default-features = false }
uefi = { version = "0.35", features = ["alloc", "logger"] }
log = "0.4"

x86_64 = "0.15"
modular-bitfield = { version = "0.12", default-features = false }
