[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = {path = "../bootloader"}
kernel_userspace = { path = "../kernel_userspace", features = ["kernel"] }
input = {path = "../input"}

x86_64 = "0.14"
bit_field = "0.10"
conquer-once = {version = "0.4", default-features = false}
acpi = "4.1"
modular-bitfield = { version = "0.11", default-features = false}
thiserror = { version = "1.0", package = "thiserror-core", default-features = false }
volatile = "0.3"
serde = { version = "1.0.*", default-features = false, features = ["derive"] }
bitflags = { version = "2.4.1", default-features = false }
hashbrown = { version = "0.14.3", default-features = false, features = ["ahash"] }
log = { version = "0.4", default-features = false }
lock_api = { version = "0.4.12", default-features = false }

[profile.dev]
# Increase speed by 1000% since there are lots of hot loops / "zero cost" abstrations that need optimising
opt-level = 1