[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = {path = "../bootloader"}
kernel_sys = { path = "../kernel_sys" }
kernel_syscall = { path = "../kernel_sys/kernel_syscall", features = ["kernel"] }
kernel_userspace = { path = "../kernel_userspace" }
input = {path = "../input"}

acpi = "5.1"
bit_field = "0.10"
bitflags = { version = "2.6.0", default-features = false }
conquer-once = {version = "0.4", default-features = false}
hashbrown = { version = "0.15", default-features = false, features = ["default-hasher"] }
lock_api = { version = "0.4.12", default-features = false }
log = { version = "0.4", default-features = false }
modular-bitfield = { version = "0.11", default-features = false}
serde = { version = "1.0.*", default-features = false, features = ["derive"] }
thiserror = { version = "2.0", default-features = false }
volatile = "0.3"
x86_64 = "0.14"

[profile.dev]
# Increase speed by 1000% since there are lots of hot loops / "zero cost" abstrations that need optimising
opt-level = 1