[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = {path = "../bootloader", default-features = false}
kernel_sys = { path = "../libs/kernel_sys", features = ["kernel"] }
kernel_userspace = { path = "../libs/kernel_userspace" }
input = {path = "../libs/input"}

acpi = "5.2.0"
bit_field = "0.10"
bitflags = { version = "2.9.0", default-features = false }
hashbrown = { version = "0.15", default-features = false, features = ["default-hasher"] }
heapless = "0.8.0"
lock_api = { version = "0.4.12", default-features = false }
log = { version = "0.4", default-features = false }
modular-bitfield = { version = "0.12", default-features = false }
num-derive = { version = "0.4.2" }
num-traits = { version = "0.2.19", default-features = false }
slab = { version = "0.4.10", default-features = false }
spin = "0.10.0"
thiserror = { version = "2.0", default-features = false }
volatile = "0.3"
x86_64 = "0.15"

[profile.dev]
# Increase speed by 1000% since there are lots of hot loops / "zero cost" abstrations that need optimising
opt-level = 1
