[package]
name = "kernel_userspace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postcard = { version = "1.0.4", features = ["alloc"] }
serde = { version = "1.0.*", default-features = false, features = ["derive"] }
input = { path = "../input" }
conquer-once = {version = "0.4", default-features = false}
thiserror = { version = "1.0", package = "thiserror-core", default-features = false }
num-derive = { version = "0.4.1" }
num-traits = { version = "0.2.17", default-features = false }