[package]
name = "kernel_userspace"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kernel_sys = { path = "../kernel_sys" }

bitflags = { version = "2.8.0", default-features = false }
bytecheck = "0.8.1"
conquer-once = {version = "0.4", default-features = false}
heapless = "0.8.0"
input = { path = "../input" }
num-derive = { version = "0.4.2" }
num-traits = { version = "0.2.19", default-features = false }
rkyv = { version = "0.8.10", default-features = false, features = ["alloc", "bytecheck"] }
spin = "0.9"
thiserror = { version = "2.0", default-features = false }
