[package]
name = "terminal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
userspace_bumpalloc = { path = "../userspace_bumpalloc" }
userspace = { path = "../userspace" }
kernel_userspace = { path = "../kernel_userspace" }
input = { path = "../input" }

thiserror = { version = "1.0", package = "thiserror-core", default-features = false }

[profile.dev]
strip = true
