[package]
name = "terminal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
userspace_slaballoc = { path = "../userspace_slaballoc" }
userspace = { path = "../userspace" }
kernel_userspace = { path = "../kernel_userspace" }
input = { path = "../input" }

[profile.dev]
strip = true
opt-level = 1