[package]
name = "test_elf"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
userspace_slaballoc = { path = "../userspace_slaballoc" }
userspace = { path = "../userspace", features = ["console"] }
kernel_userspace = { path = "../kernel_userspace" }

[profile.dev]
strip = true