[package]
name = "userspace"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# enables stdin/stdout/stderr
console = []

[dependencies]
kernel_userspace = { path = "../kernel_userspace" }
spin = "0.9"
log = "0.4"
