[package]
name = "kernel_syscall"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[features]
iret = []
kernel = []

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
num-traits = { version = "0.2.19", default-features = false }
