[package]
name = "kernel_sys"
version = "0.1.0"
edition = "2024"

[features]
kernel = ["kernel_syscall/kernel"]

[dependencies]
kernel_syscall = { path = "kernel_syscall" }

bitflags.workspace = true
num-derive.workspace = true
num-traits.workspace = true
heapless.workspace = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_abi, values("kernel","driver","userspace"))'] }
