[package]
name = "userspace"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# enables stdin/stdout/stderr
console = []

[dependencies]
kernel_userspace.workspace = true

spin.workspace = true
log.workspace = true
